@@ -1,7 +1,13 @@
+2024-08-14  Paul J. Lucas <paul@lucasmail.org>
+
+   * p_token.c, p_token.h, expand-C23_std-6.10.4.1-ex-2.out,
+     expand-va-opt-minutiae.out, expand-va-opt-minutiae.test: Fixed incorrect
+     deletion of whitespace when concatenating tokens in some cases.
+
 2024-08-13  Paul J. Lucas <paul@lucasmail.org>
 
-   * p_macro.c, expand-va-opt-minutiae.out, expand-va-opt-minutiae.test: When
-     `__VA_OPT__` expands to nothing, it needs to expand into a placemarker.
+   * p_macro.c, expand-va-opt-minutiae.out, expand-va-opt-minutiae.test:
+     Updated.
    * expand-va-opt-minutiae.out, expand-va-opt-minutiae.test: Another
      preprocessor test.
    * cli_options.c, cli_options-error.out, cli_options.out: Updated help for
